@@ -69,34 +69,34 @@ public class ArmorOfHellblazeMonarchModel<T extends LivingEntity> extends Entity
         PartDefinition arm_left = partdefinition.addOrReplaceChild("arm_left", CubeListBuilder.create().texOffs(20, 0).mirror().addBox(-1.0F, 1.0F, -2.0F, 4.0F, 6.0F, 4.0F, new CubeDeformation(0.4F)).mirror(false), PartPose.offset(6.0F, 0.0F, 0.0F));
 
         PartDefinition shoulder_r2_r1 = arm_left.addOrReplaceChild("shoulder_r2_r1", CubeListBuilder.create().texOffs(0, 0).mirror().addBox(-2.5F, -2.5F, -2.5F, 5.0F, 5.0F, 5.0F, new CubeDeformation(0.7F)).mirror(false)
-                .texOffs(0, 10).mirror().addBox(-2.5F, -2.5F, -2.5F, 5.0F, 5.0F, 5.0F, new CubeDeformation(0.4F)).mirror(false), PartPose.offsetAndRotation(1.3F, 0.0F, 0.0F, 0.0F, 0.0F, 0.1745F));
+            .texOffs(0, 10).mirror().addBox(-2.5F, -2.5F, -2.5F, 5.0F, 5.0F, 5.0F, new CubeDeformation(0.4F)).mirror(false), PartPose.offsetAndRotation(1.3F, 0.0F, 0.0F, 0.0F, 0.0F, 0.1745F));
 
         PartDefinition arm_right = partdefinition.addOrReplaceChild("arm_right", CubeListBuilder.create().texOffs(20, 0).addBox(-3.0F, 1.0F, -2.0F, 4.0F, 6.0F, 4.0F, new CubeDeformation(0.4F)), PartPose.offset(-6.0F, 0.0F, 0.0F));
 
         PartDefinition shoulder_r3_r1 = arm_right.addOrReplaceChild("shoulder_r3_r1", CubeListBuilder.create().texOffs(0, 0).addBox(-2.5F, -2.5F, -2.5F, 5.0F, 5.0F, 5.0F, new CubeDeformation(0.7F))
-                .texOffs(0, 10).addBox(-2.5F, -2.5F, -2.5F, 5.0F, 5.0F, 5.0F, new CubeDeformation(0.4F)), PartPose.offsetAndRotation(-1.3F, 0.0F, 0.0F, 0.0F, 0.0F, -0.1745F));
+            .texOffs(0, 10).addBox(-2.5F, -2.5F, -2.5F, 5.0F, 5.0F, 5.0F, new CubeDeformation(0.4F)), PartPose.offsetAndRotation(-1.3F, 0.0F, 0.0F, 0.0F, 0.0F, -0.1745F));
 
         PartDefinition chestplate = partdefinition.addOrReplaceChild("chestplate", CubeListBuilder.create().texOffs(0, 20).addBox(-4.0F, 0.0F, -2.0F, 8.0F, 12.0F, 4.0F, new CubeDeformation(0.45F))
-                .texOffs(0, 20).addBox(-4.0F, 0.0F, -2.0F, 8.0F, 6.0F, 4.0F, new CubeDeformation(0.8F))
-                .texOffs(20, 14).addBox(-4.0F, 0.0F, -2.0F, 8.0F, 6.0F, 4.0F, new CubeDeformation(0.9F))
-                .texOffs(20, 14).addBox(-4.0F, 7.0F, -2.0F, 8.0F, 1.0F, 4.0F, new CubeDeformation(0.7F)), PartPose.offset(0.0F, 0.0F, 0.0F));
+            .texOffs(0, 20).addBox(-4.0F, 0.0F, -2.0F, 8.0F, 6.0F, 4.0F, new CubeDeformation(0.8F))
+            .texOffs(20, 14).addBox(-4.0F, 0.0F, -2.0F, 8.0F, 6.0F, 4.0F, new CubeDeformation(0.9F))
+            .texOffs(20, 14).addBox(-4.0F, 7.0F, -2.0F, 8.0F, 1.0F, 4.0F, new CubeDeformation(0.7F)), PartPose.offset(0.0F, 0.0F, 0.0F));
 
         PartDefinition helmet = partdefinition.addOrReplaceChild("helmet", CubeListBuilder.create().texOffs(0, 52).addBox(-4.0F, -11.0F, 2.0F, 2.0F, 3.0F, 2.0F, new CubeDeformation(0.45F))
-                .texOffs(0, 52).mirror().addBox(2.0F, -11.0F, 2.0F, 2.0F, 3.0F, 2.0F, new CubeDeformation(0.45F)).mirror(false)
-                .texOffs(0, 36).addBox(-4.0F, -8.0F, -4.0F, 8.0F, 8.0F, 8.0F, new CubeDeformation(0.4F))
-                .texOffs(32, 36).addBox(-4.0F, -8.0F, -4.0F, 8.0F, 8.0F, 8.0F, new CubeDeformation(0.7F)), PartPose.offset(0.0F, 0.0F, 0.0F));
+            .texOffs(0, 52).mirror().addBox(2.0F, -11.0F, 2.0F, 2.0F, 3.0F, 2.0F, new CubeDeformation(0.45F)).mirror(false)
+            .texOffs(0, 36).addBox(-4.0F, -8.0F, -4.0F, 8.0F, 8.0F, 8.0F, new CubeDeformation(0.4F))
+            .texOffs(32, 36).addBox(-4.0F, -8.0F, -4.0F, 8.0F, 8.0F, 8.0F, new CubeDeformation(0.7F)), PartPose.offset(0.0F, 0.0F, 0.0F));
 
         PartDefinition horn_r1_r1 = helmet.addOrReplaceChild("horn_r1_r1", CubeListBuilder.create().texOffs(0, 52).mirror().addBox(-1.0F, -2.0F, -1.0F, 2.0F, 4.0F, 2.0F, new CubeDeformation(0.2F)).mirror(false)
-                .texOffs(0, 52).addBox(-7.0F, -2.0F, -1.0F, 2.0F, 4.0F, 2.0F, new CubeDeformation(0.2F)), PartPose.offsetAndRotation(3.0F, -13.0F, -3.0F, -0.2618F, 0.0F, 0.0F));
+            .texOffs(0, 52).addBox(-7.0F, -2.0F, -1.0F, 2.0F, 4.0F, 2.0F, new CubeDeformation(0.2F)), PartPose.offsetAndRotation(3.0F, -13.0F, -3.0F, -0.2618F, 0.0F, 0.0F));
 
         PartDefinition horn_r2_r1 = helmet.addOrReplaceChild("horn_r2_r1", CubeListBuilder.create().texOffs(0, 52).mirror().addBox(-1.0F, -2.0F, -1.0F, 2.0F, 4.0F, 2.0F, new CubeDeformation(0.45F)).mirror(false)
-                .texOffs(0, 52).addBox(-7.0F, -2.0F, -1.0F, 2.0F, 4.0F, 2.0F, new CubeDeformation(0.45F)), PartPose.offsetAndRotation(3.0F, -9.0F, -3.0F, 0.1745F, 0.0F, 0.0F));
+            .texOffs(0, 52).addBox(-7.0F, -2.0F, -1.0F, 2.0F, 4.0F, 2.0F, new CubeDeformation(0.45F)), PartPose.offsetAndRotation(3.0F, -9.0F, -3.0F, 0.1745F, 0.0F, 0.0F));
 
         PartDefinition leg_left = partdefinition.addOrReplaceChild("leg_left", CubeListBuilder.create().texOffs(48, 12).addBox(-2.0F, -1.0F, -2.0F, 4.0F, 12.0F, 4.0F, new CubeDeformation(0.4F))
-                .texOffs(20, 0).mirror().addBox(-2.0F, 0.0F, -2.0F, 4.0F, 6.0F, 4.0F, new CubeDeformation(0.6F)).mirror(false), PartPose.offset(2.0F, 12.0F, 0.0F));
+            .texOffs(20, 0).mirror().addBox(-2.0F, 0.0F, -2.0F, 4.0F, 6.0F, 4.0F, new CubeDeformation(0.6F)).mirror(false), PartPose.offset(2.0F, 12.0F, 0.0F));
 
         PartDefinition leg_right = partdefinition.addOrReplaceChild("leg_right", CubeListBuilder.create().texOffs(48, 12).mirror().addBox(-2.0F, -1.0F, -2.0F, 4.0F, 12.0F, 4.0F, new CubeDeformation(0.4F)).mirror(false)
-                .texOffs(20, 0).addBox(-2.0F, 0.0F, -2.0F, 4.0F, 6.0F, 4.0F, new CubeDeformation(0.6F)), PartPose.offset(-2.0F, 12.0F, 0.0F));
+            .texOffs(20, 0).addBox(-2.0F, 0.0F, -2.0F, 4.0F, 6.0F, 4.0F, new CubeDeformation(0.6F)), PartPose.offset(-2.0F, 12.0F, 0.0F));
 
         PartDefinition boot_right = partdefinition.addOrReplaceChild("boot_right", CubeListBuilder.create().texOffs(4, 11).addBox(-2.0F, 8.0F, -2.0F, 4.0F, 4.0F, 4.0F, new CubeDeformation(0.8F)), PartPose.offset(-2.0F, 12.0F, 0.0F));
 
@@ -109,24 +109,24 @@ public class ArmorOfHellblazeMonarchModel<T extends LivingEntity> extends Entity
     {
         ArmorOfHellblazeMonarchModel<LivingEntity> testModel = new ArmorOfHellblazeMonarchModel<>(Minecraft.getInstance().getEntityModels().bakeLayer(ArmorOfHellblazeMonarchModel.LAYER_LOCATION));
         return new HumanoidModel<>(new ModelPart(
-                Collections.emptyList(),
-                Map.of(
-                        "left_leg", slot.equals(EquipmentSlot.FEET) ? testModel.boot_left :
-                                slot.equals(EquipmentSlot.LEGS) ? testModel.leg_left : new ModelPart(Collections.emptyList(), Collections.emptyMap()),
+            Collections.emptyList(),
+            Map.of(
+                "left_leg", slot.equals(EquipmentSlot.FEET) ? testModel.boot_left :
+                    slot.equals(EquipmentSlot.LEGS) ? testModel.leg_left : new ModelPart(Collections.emptyList(), Collections.emptyMap()),
 
-                        "right_leg", slot.equals(EquipmentSlot.FEET) ? testModel.boot_right :
-                                slot.equals(EquipmentSlot.LEGS) ? testModel.leg_right : new ModelPart(Collections.emptyList(), Collections.emptyMap()),
+                "right_leg", slot.equals(EquipmentSlot.FEET) ? testModel.boot_right :
+                    slot.equals(EquipmentSlot.LEGS) ? testModel.leg_right : new ModelPart(Collections.emptyList(), Collections.emptyMap()),
 
-                        "hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
+                "hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
 
-                        "head", slot.equals(EquipmentSlot.HEAD) ? testModel.helmet : new ModelPart(Collections.emptyList(), Collections.emptyMap()),
+                "head", slot.equals(EquipmentSlot.HEAD) ? testModel.helmet : new ModelPart(Collections.emptyList(), Collections.emptyMap()),
 
-                        "body", slot.equals(EquipmentSlot.CHEST) ? testModel.chestplate : new ModelPart(Collections.emptyList(), Collections.emptyMap()),
+                "body", slot.equals(EquipmentSlot.CHEST) ? testModel.chestplate : new ModelPart(Collections.emptyList(), Collections.emptyMap()),
 
-                        "left_arm", slot.equals(EquipmentSlot.CHEST) ? testModel.arm_left : new ModelPart(Collections.emptyList(), Collections.emptyMap()),
+                "left_arm", slot.equals(EquipmentSlot.CHEST) ? testModel.arm_left : new ModelPart(Collections.emptyList(), Collections.emptyMap()),
 
-                        "right_arm", slot.equals(EquipmentSlot.CHEST) ? testModel.arm_right : new ModelPart(Collections.emptyList(), Collections.emptyMap())
-                )
+                "right_arm", slot.equals(EquipmentSlot.CHEST) ? testModel.arm_right : new ModelPart(Collections.emptyList(), Collections.emptyMap())
+            )
         ));
     }
 
